Added  all functionality as requested

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Supabase Configuration
-VITE_SUPABASE_URL=your_supabase_url_here
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+VITE_SUPABASE_URL=https://your-project-id.supabase.co
+VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
-# Cloudinary Configuration
-VITE_CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
-VITE_CLOUDINARY_UPLOAD_PRESET=your_cloudinary_upload_preset
+# Cloudinary Configuration (optional)
+VITE_CLOUDINARY_CLOUD_NAME=your-cloudinary-cloud-name
+VITE_CLOUDINARY_UPLOAD_PRESET=your-upload-preset
 
-# Server Configuration
-PORT=3000
+# Google Analytics (optional)
+VITE_GA_TRACKING_ID=your-ga-tracking-id
