--- a/package.json
+++ b/package.json
@@ -1,26 +1,50 @@
 {
-	"name": "projeto-opine-node",
-	"version": "1.0.0",
-	"description": "Portal de notícias Opine Agora SC com SSR",
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js",
-		"dev": "concurrently \"vite\" \"node --watch server.js\"",
-		"build": "vite build",
-		"preview": "vite preview"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
+	"name": "opine-agora-sc-react",
+	"version": "2.0.0",
+	"description": "Portal de notícias Opine Agora SC - React + Vite",
 	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
+	},
+	"keywords": [
+		"react",
+		"vite",
+		"news-portal",
+		"supabase",
+		"tailwind"
+	],
+	"author": "Cristiano Soares",
+	"license": "ISC",
 	"dependencies": {
+		"@dnd-kit/core": "^6.1.0",
+		"@dnd-kit/sortable": "^8.0.0",
+		"@dnd-kit/utilities": "^3.2.2",
 		"@supabase/supabase-js": "^2.39.7",
-		"dotenv": "^16.4.1",
-		"ejs": "^3.1.9",
-		"express": "^5.2.1"
+		"date-fns": "^3.6.0",
+		"lucide-react": "^0.363.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-helmet-async": "^2.0.4",
+		"react-hook-form": "^7.51.0",
+		"react-hot-toast": "^2.4.1",
+		"react-router-dom": "^6.22.3",
+		"slugify": "^1.6.6",
+		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
-		"concurrently": "^8.2.2",
+		"@types/react": "^18.2.66",
+		"@types/react-dom": "^18.2.22",
+		"@vitejs/plugin-react": "^4.2.1",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react": "^7.34.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.6",
+		"postcss": "^8.4.38",
+		"tailwindcss": "^3.4.3",
 		"vite": "^7.3.1"
 	}
 }
