--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react-hot-toast": "^2.4.1",
 		"react-router-dom": "^6.22.3",
 		"slugify": "^1.6.6",
+		"swiper": "^12.1.1",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
@@ -45,6 +46,7 @@
 		"eslint-plugin-react-refresh": "^0.4.6",
 		"postcss": "^8.4.38",
 		"tailwindcss": "^3.4.3",
+		"terser": "^5.46.0",
 		"vite": "^7.3.1"
 	}
 }
