--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
 		"@dnd-kit/utilities": "^3.2.2",
 		"@supabase/supabase-js": "^2.39.7",
 		"date-fns": "^3.6.0",
+		"dotenv": "^16.4.5",
+		"ejs": "^3.1.10",
+		"express": "^4.19.2",
 		"lucide-react": "^0.363.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
