updated vercel.json to fix dotenv error

--- a/vercel.json
+++ b/vercel.json
@@ -14,5 +14,10 @@
       "source": "/(.*)",
       "destination": "/server.js"
     }
-  ]
+  ],
+  "functions": {
+    "server.js": {
+      "maxDuration": 10
+    }
+  }
 }
