--- a/vercel.json
+++ b/vercel.json
@@ -11,8 +11,12 @@
   ],
   "rewrites": [
     {
-      "source": "/(.*)",
-      "destination": "server.js"
+      "source": "/api/(.*)",
+      "destination": "/server.js"
+    },
+    {
+      "source": "/((?!api/).*)",
+      "destination": "/dist/index.html"
     }
   ]
 }
