--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
 		"@dnd-kit/core": "^6.1.0",
 		"@dnd-kit/sortable": "^8.0.0",
 		"@dnd-kit/utilities": "^3.2.2",
+		"@emailjs/browser": "^4.4.1",
 		"@supabase/supabase-js": "^2.39.7",
 		"date-fns": "^3.6.0",
+		"framer-motion": "^12.34.2",
 		"lucide-react": "^0.363.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
