--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
 		"@dnd-kit/utilities": "^3.2.2",
 		"@emailjs/browser": "^4.4.1",
 		"@supabase/supabase-js": "^2.39.7",
+		"@tiptap/extension-bubble-menu": "^3.20.0",
+		"@tiptap/extension-image": "^3.20.0",
+		"@tiptap/extension-link": "^3.20.0",
+		"@tiptap/pm": "^3.20.0",
+		"@tiptap/react": "^3.20.0",
+		"@tiptap/starter-kit": "^3.20.0",
 		"date-fns": "^3.6.0",
 		"framer-motion": "^12.34.2",
 		"lucide-react": "^0.363.0",
@@ -32,12 +38,15 @@
 		"react-helmet-async": "^2.0.4",
 		"react-hook-form": "^7.51.0",
 		"react-hot-toast": "^2.4.1",
+		"react-markdown": "^10.1.0",
 		"react-router-dom": "^6.22.3",
 		"slugify": "^1.6.6",
 		"swiper": "^12.1.1",
+		"tiptap-markdown": "^0.9.0",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.19",
 		"@types/react": "^18.2.66",
 		"@types/react-dom": "^18.2.22",
 		"@vitejs/plugin-react": "^4.2.1",
